<resources>
    <string name="app_name">Meet &amp; Eat</string>
    <string name="introText">Welcome to Meet &amp; Eat! \n\n\n This application helps you waste less
        food by letting other people join your dinner. Alternatively, this application lets you join
        other people\'s dinners so that you won\'t have to cook tonight! </string>
    <string name="cookOrJoin">Will you be cooking or joining a dinner tonight?</string>
    <string name="cooking">Cooking</string>
    <string name="whatMaking">What are you making?</string>
    <string name="food">Food</string>
    <string name="howManyPeople">How many people can join your dinner?</string>
    <string name="number">Number</string>
    <string name="whatTime">What time will dinner start?</string>
    <string name="timeHint">hh:mm</string>
    <string name="typeCuisine">What type of cuisine is your dinner?</string>
    <string name="cuisine">Cuisine</string>
    <string name="cuisineOpt">Cuisine (optional)</string>
    <string name="whatArea">What area are you in?</string>
    <string name="area">Area</string>
    <string name="city">City</string>
    <string name="whatIngredients">What are the ingredients you\'re using?</string>
    <string name="ingredients">Ingredients</string>
    <string name="add">Add</string>
    <string name="joining">Joining</string>
    <string name="whatPreference">What\'s your dinner preference?</string>
    <string name="search">Search</string>
    <string name="results">Results</string>
    <string name="host">Host</string>
    <string name="free">Free spaces</string>
    <string name="startTime">Start time</string>
    <string name="openDrawer">Open navigation drawer</string>
    <string name="closeDrawer">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="signOut">Sign out</string>
    <string name="joinButtonDesc">This button can be clicked to join a dinner</string>
    <string name="getRecipe">Get recipe</string>
    <string name="recipes">Recipes</string>
    <string name="recipeImageDesc">This is where the image of a recipe is placed</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="makeDinner">Make for\n dinner</string>
    <string name="email">E-mail address</string>
    <string name="password">Password</string>
    <string name="signIn">Sign in</string>
    <string name="signUp">Sign up</string>
    <string name="name">Name</string>
    <string name="accountAlready">Already have an account?</string>
    <string name="areaPref">In what area do you want to have dinner tonight?</string>
    <string name="dinnersIn">Dinners in </string>
    <string name="hostDinners">Hosting Dinners</string>
    <string name="date">Date</string>
    <string name="guests">Guests</string>
    <string name="dinnerImageDesc">This is an image of the dinner</string>
    <string name="joinedDinners">Joined dinners</string>
    <string name="veganLower">vegan</string>
    <string name="newIngredients">What are the new ingredients you\'re going to use?</string>
    <string name="newDate">What\'s the new date for your dinner?</string>
    <string name="newTitle">What\'s the new title for your dinner?</string>
    <string name="save">Save</string>
    <string name="time">Time</string>
    <string name="searching">Searching…</string>
    <string name="noResults">No results were found</string>
    <string name="loading">Loading…</string>
    <string name="startDinner">When will dinner start?</string>
    <string name="joinButonDesc">This button allows the user to join a dinner</string>
    <string name="drawerIconDesc">This icon depicts the drawer item</string>
    <string name="deleteButtonDesc">This button lets the user delete a dinner or remove themselves from it</string>
    <string name="editButtonDesc">This button lets the user edit his dinner</string>
    <string name="logoDesc">This image contains the app logo</string>
    <string name="allFields">Please fill in all fields</string>
    <string name="validArea">Please fill in a valid area</string>
    <string name="moreThan0">Please allow more than 0 people to join</string>
    <string name="validNumber">Please fill in a valid number</string>
    <string name="dbReadFail">Failed to read database</string>
    <string name="notJoinOwnDinner">You cannot join your own dinner</string>
    <string name="failedJoin">Failed to join dinner</string>
    <string name="successJoin">Joined dinner</string>
    <string name="notifyHost">Notify host</string>
    <string name="failHostEmail">Could not retrieve host\'s e-mail address</string>
    <string name="noEmailClients">There are no e-mail clients installed</string>
    <string name="failedRetrieveDinners">Could not retrieve dinners</string>
    <string name="failedSaveName">Could not save name</string>
    <string name="successUpdate">Updated dinner</string>
    <string name="failUpdate">Failed to update dinner</string>
    <string name="failFind">Could not find dinner</string>
    <string name="removeGuest">No longer joining your dinner</string>
    <string name="removedAlready">You have already been removed from this dinner</string>
    <string name="failDelete">Could not delete dinner</string>
    <string name="failFindEmailGuest">Could not retrieve guests\' e-mail addresses</string>
    <string name="notifyGuest">Notify guest</string>
    <string name="cancelDinner">Cancelling dinner</string>
    <string name="signInJoin">Please sign in to join a dinner</string>
    <string name="noFreeSpaces">There are no more free spaces for this dinner</string>
    <string name="howManyJoin">With how many people would you like to join this dinner?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="noDataFound">No data was found</string>
    <string name="account">Account</string>
    <string name="hosting">Hosting dinners</string>
    <string name="joined">Joined dinners</string>
    <string name="logInRequired">Please log in to view this page</string>
    <string name="navigation">Navigation</string>
    <string name="hello">Hello,</string>
    <string name="exclamation">!</string>
    <string name="helloExcl">Hello!</string>
    <string name="successAddDinner">Added dinner</string>
    <string name="logInAddDinner">Please log in to add a dinner</string>
    <string name="none">none</string>
    <string name="dialogEdit">Are you sure you want to edit this dinner?</string>
    <string name="dialogUnjoin">Are you sure you no longer want to join this dinner?</string>
    <string name="dialogDelete">Are you sure you want to delete this dinner?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="failAuth">Authentication failed</string>
    <string name="successLogIn">Logged in successfully</string>
    <string name="successRegister">Registered successfully</string>
    <string name="failPassword">Password must be at least 6 characters</string>
    <string name="failEmail">Invalid e-mail address</string>
    <string name="failUserExists">User already exists</string>
    <string name="failNetwork">No network connection</string>
    <string name="joinEmail">"Hello!\n\nI have joined your dinner (%1$s) at %2$s. Please contact me for details, such as your address.\nThank you in advance.\n\nKind regards, \n%3$s</string>
    <string name="unjoinEmail">"Hello!\n\nI would like to inform you that I am no longer joining your dinner (%1$s) at %2$s. I hope you understand.\n\nKind regards, \n%3$s</string>
    <string name="cancelEmail">"Hello!\n\nUnfortunately, I have cancelled the dinner you joined (%1$s) at %2$s. I hope you understand.\nThank you in advance.\n\nKind regards, \n%3$s</string>
</resources>
