<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cook"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nl.mprog.meeteat.CookFragment">

    <TextView
        android:text="@string/whatMaking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/whatMaking" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/whatMaking"
        android:layout_alignStart="@+id/whatMaking"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:ems="10"
        android:hint="@string/food"
        android:id="@+id/giveFood"/>

    <TextView
        android:text="@string/whatTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/giveFood"
        android:layout_marginTop="20dp"
        android:id="@+id/whatTime"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/whatTime"
        android:inputType="time"
        android:textSize="14sp"
        android:hint="@string/timeHint"
        android:ems="10"
        android:id="@+id/giveTime" />

    <TextView
        android:text="@string/howManyPeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/giveTime"
        android:layout_marginTop="20dp"
        android:id="@+id/howManyPeople"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/howManyPeople"
        android:inputType="number"
        android:textSize="14sp"
        android:hint="@string/number"
        android:ems="10"
        android:id="@+id/giveAmount" />

    <TextView
        android:text="@string/typeCuisine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/giveAmount"
        android:layout_marginTop="20dp"
        android:id="@+id/typeCuisine"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/typeCuisine"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:hint="@string/cuisine"
        android:ems="10"
        android:id="@+id/giveCuisine" />


    <TextView
        android:text="@string/whatArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/giveCuisine"
        android:layout_marginTop="20dp"
        android:id="@+id/whatArea"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/whatArea"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:hint="@string/city"
        android:ems="10"
        android:id="@+id/giveArea" />

    <TextView
        android:text="@string/whatIngredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/giveArea"
        android:layout_marginTop="20dp"
        android:id="@+id/whatIngredients"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/whatIngredients"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:hint="@string/ingredients"
        android:ems="10"
        android:id="@+id/giveIngredients" />

    <Button
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:onClick="addDinner"
        android:id="@+id/addButton" />
</RelativeLayout>
