<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:text="@string/whatMaking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/whatMaking" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:ems="10"
        android:hint="@string/food"
        android:id="@+id/giveFood"/>

    <TextView
        android:text="@string/howManyPeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/howManyPeople"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textSize="14sp"
        android:hint="@string/number"
        android:ems="10"
        android:id="@+id/giveAmount" />

    <TextView
        android:text="@string/whatArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/whatArea"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:hint="@string/city"
        android:ems="10"
        android:id="@+id/giveArea" />

    <TextView
        android:text="@string/startDinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/whatTime"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:textSize="14sp"
            android:hint="@string/date"
            android:ems="8"
            android:focusable="false"
            android:id="@+id/giveDate" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:inputType="time"
            android:textSize="14sp"
            android:hint="@string/time"
            android:ems="5"
            android:focusable="false"
            android:id="@+id/giveTime" />

    </LinearLayout>


    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <Button
            android:text="@string/getRecipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/addButton" />

    </RelativeLayout>

</LinearLayout>