<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_add"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="@null"
        android:contentDescription="@string/joinButtonDesc"
        android:id="@+id/joinButton" />

    <TextView
        android:text="@string/host"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="5dp"
        android:layout_toStartOf="@id/joinButton"
        android:id="@+id/host"/>

    <TextView
        android:text="@string/free"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/host"
        android:layout_marginBottom="5dp"
        android:layout_toStartOf="@id/joinButton"
        android:id="@+id/space" />

    <TextView
        android:text="@string/startTime"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/space"
        android:layout_marginBottom="5dp"
        android:layout_toStartOf="@id/joinButton"
        android:id="@+id/startTime" />

    <TextView
        android:text="@string/cuisine"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/startTime"
        android:layout_marginBottom="5dp"
        android:layout_toStartOf="@id/joinButton"
        android:id="@+id/cuisine" />

    <TextView
        android:text="@string/ingredients"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cuisine"
        android:layout_marginBottom="5dp"
        android:layout_toStartOf="@id/joinButton"
        android:id="@+id/ingredients" />
</RelativeLayout>