<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="1dp"
        android:background="@android:color/darker_gray"
        android:layout_alignParentStart="true"
        android:id="@+id/dinnerImage" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_add"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="@null"
        android:contentDescription="@string/joinButtonDesc"
        android:id="@+id/joinButton" />

    <TextView
        android:text="@string/host"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/dinnerImage"
        android:layout_marginStart="10dp"
        android:layout_toStartOf="@id/joinButton"
        android:id="@+id/host"/>

    <TextView
        android:text="@string/free"
        android:layout_toEndOf="@id/dinnerImage"
        android:layout_alignStart="@+id/host"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/host"
        android:layout_toStartOf="@id/joinButton"
        android:id="@+id/space" />

    <TextView
        android:text="@string/date"
        android:layout_alignStart="@+id/host"
        android:layout_toEndOf="@id/dinnerImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/space"
        android:layout_toStartOf="@id/joinButton"
        android:id="@+id/date" />

    <TextView
        android:text="@string/vegetarian"
        android:layout_alignStart="@+id/host"
        android:layout_toEndOf="@id/dinnerImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/date"
        android:id="@+id/vegetarian" />

    <TextView
        android:text="@string/veganLower"
        android:layout_toEndOf="@id/vegetarian"
        android:layout_alignTop="@id/vegetarian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/joinButton"
        android:id="@+id/vegan" />

    <TextView
        android:text="@string/ingredients"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dinnerImage"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/ingredients" />
</RelativeLayout>