<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_join"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nl.mprog.meeteat.JoinActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/whatArea"
        android:id="@+id/whatArea" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/whatArea"
        android:hint="@string/city"
        android:inputType="textPersonName"
        android:ems="10"
        android:textSize="14sp"
        android:id="@+id/giveArea"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/giveArea"
        android:layout_marginTop="20dp"
        android:text="@string/whatPreference"
        android:id="@+id/whatPreference" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/whatPreference"
        android:hint="@string/cuisineOpt"
        android:inputType="textPersonName"
        android:ems="10"
        android:textSize="14sp"
        android:id="@+id/givePreference"/>

    <Button
        android:text="@string/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:onClick="search"
        android:id="@+id/searchButton" />

</RelativeLayout>
