<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_log_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nl.mprog.meeteat.SignInFragment">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/email"
        android:layout_marginTop="72.5dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/giveEmail" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:ems="10"
        android:layout_below="@id/giveEmail"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/givePassword" />

    <Button
        android:text="@string/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/givePassword"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:id="@+id/signInButton" />

    <Button
        android:text="@string/signOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/signInButton"
        android:background="@color/colorPrimary"
        android:visibility="invisible"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:id="@+id/signOutButton" />

</RelativeLayout>
