<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nl.mprog.meeteat.MainFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:id="@+id/helloText"/>

    <TextView
        android:text="@string/cookOrJoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/helloText"
        android:id="@+id/cookOrJoin"/>

    <Button
        android:text="@string/cooking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cookOrJoin"
        android:layout_marginTop="75dp"
        android:layout_alignStart="@id/cookOrJoin"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:id="@+id/cookingButton" />

    <Button
        android:text="@string/joining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/cookingButton"
        android:layout_alignEnd="@id/cookOrJoin"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:id="@+id/joiningButton" />

</RelativeLayout>
