<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout">

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="nl.mprog.meeteat.MainActivity">

        <TextView
            android:text="@string/introText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:id="@+id/introText" />

        <com.google.android.gms.common.SignInButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/introText"
            android:layout_marginTop="40dp"
            android:id="@+id/signInButton" />

        <TextView
            android:text="@string/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:visibility="invisible"
            android:id="@+id/helloText"/>

        <TextView
            android:text="@string/cookOrJoin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/helloText"
            android:visibility="invisible"
            android:id="@+id/cookOrJoin"/>

        <Button
            android:text="@string/cooking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cookOrJoin"
            android:layout_marginTop="75dp"
            android:layout_alignLeft="@id/cookOrJoin"
            android:layout_alignStart="@id/cookOrJoin"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:visibility="invisible"
            android:id="@+id/cookingButton" />

        <Button
            android:text="@string/joining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/cookingButton"
            android:layout_alignRight="@id/cookOrJoin"
            android:layout_alignEnd="@id/cookOrJoin"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:visibility="invisible"
            android:id="@+id/joiningButton" />
    </RelativeLayout>

    <ListView
        android:id="@+id/navigationList"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#ffeeeeee"/>
</android.support.v4.widget.DrawerLayout>